<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:orientation="vertical">
    <include layout="@layout/main_toolbar"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.viewpager.widget.ViewPager
                android:scaleY="2"
                android:paddingTop="35dp"
                android:id="@+id/vp_banner"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="170dp">
        </androidx.viewpager.widget.ViewPager>
        <LinearLayout
                android:layout_marginTop="150dp"
                android:gravity="center|bottom"
                android:id="@+id/dots_container"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
        </LinearLayout>
    </RelativeLayout>


    <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/tv_category"
            android:textColor="@color/colorDark"
            android:textSize="20sp"
            android:text="Categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cat"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
            android:id="@+id/tv_sold"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorDark"
            android:textSize="20sp"
            android:text="Mais vendidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>