<androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/allproducts_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/tv_logo_about"
                android:textSize="24sp"
                android:textColor="@color/colorWhiteTwo"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.appcompat.widget.Toolbar>